# pinball

./: .gitignore  CMakeLists.txt  README.md
assets/levels/: board.json
assets/shaders/: basic.frag  basic.vert  overlay.vert
src/: main.cpp
src/application/: AppController.cpp  AppController.hpp
src/application/editor/: LevelEditor.cpp  LevelEditor.hpp
src/application/ports/: IClock.hpp  IInputProvider.hpp  ILevelRepository.hpp  IRenderer.hpp
src/application/simulation/: PinballSimulation.cpp  PinballSimulation.hpp
src/application/view/: Camera.cpp  Camera.hpp
src/domain/: Ball.hpp  Board.cpp  Board.hpp
src/domain/elements/: Bumper.cpp  Bumper.hpp  Capabilities.hpp  ElementFactory.cpp  ElementFactory.hpp  ElementType.hpp  Flipper.cpp  Flipper.hpp  Hole.cpp  Hole.hpp  IBoardElement.hpp  Rail.cpp  Rail.hpp  Spawn.cpp  Spawn.hpp  Wall.cpp  Wall.hpp
src/domain/math/: Geometry.cpp  Geometry.hpp
src/domain/physics/: Collision3D.cpp  Collision3D.hpp  CollisionShape.hpp
src/domain/render/: RenderItem.hpp
src/domain/serialization/: IArchive.hpp
src/infrastructure/gl/: Font5x7.cpp  Font5x7.hpp  GlFunctions.inl  GlLoader.cpp  GlLoader.hpp  GlRenderer.cpp  GlRenderer.hpp  Mesh.cpp  Mesh.hpp  MeshLibrary.cpp  MeshLibrary.hpp  Shader.cpp  Shader.hpp
src/infrastructure/persistence/: JsonArchive.hpp  JsonLevelRepository.cpp  JsonLevelRepository.hpp
src/infrastructure/sdl/: SdlClock.cpp  SdlClock.hpp  SdlInput.cpp  SdlInput.hpp
tests/: selftest.cpp
